[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }
chrono = "0.4.19"
r2d2 = "0.8.10"
serde_json = "1.0.82"
serde = { version = "1.0.141", features = ["derive"]}
async-trait = "0.1.56"
futures = "0.3.21"
log = "0.4.17"

juniper = "0.15.9"
actix-session = { version = "0.7.1", features = ["cookie-session"] }
dataloader = { version = "0.15.0", default-features = false, features = ["runtime-tokio"]}
