[package]
name = "web_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
thiserror = "1.0.32"
error-stack = "0.1.1"
reqwest = { version = "0.11.11", features = ["blocking"] }
scraper = "0.13.0"
serde = { version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
diesel = { version = "1.4.0", features = ["postgres", "chrono", "numeric", "r2d2"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }
dotenv = "0.15.0"
lettre = "0.10.0"
chrono = { version = "0.4.19", features = ["serde"] }
config = { version = "0.13.1", features = ["json"] }
tokio = { version = "1.20.0", features = ["full"] }
futures = { version = "0.3.21", features = ["compat"] }
fantoccini = { version = "0.19.1", features = ["rustls-tls", "native-tls"] }
async-trait = "0.1.57"
url = "2.2.2"
itertools = "0.10.3"
tokio-retry = "0.3.0"

database = { path = "../database" }
