[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
actix-cors = "0.6.1"
chrono = "0.4.19"
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.9.0"
juniper = "0.15.9"
serde_json = "1.0.82"
url = "2.2.2"

database = { path = "../database" }
